# intern-crud

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOYMENT-MIKRUS.md  DEPLOYMENT.md  Dockerfile  QUICKSTART-MIKRUS.md  README.md  cloudflare-tunnel-add-service.sh  commit-and-deploy.sh  cover-image-ideas.md  cover-image-mockup.txt  deploy-mikrus.sh  docker-compose.yml  medium-article.md  pyproject.toml  requirements.txt  test-docker.sh
.augment/commands/: speckit.plan.md
.augment/rules/: specify-rules.md  technical-design.md
backend/: config.py  run.py
backend/app/: __init__.py  errors.py
backend/app/admin/: __init__.py  routes.py
backend/app/auth/: __init__.py  forms.py  routes.py  utils.py
backend/app/auth/templates/: login.html  register.html
backend/app/models/: __init__.py  profile.py  user.py
backend/app/profiles/: __init__.py  forms.py  routes.py
backend/app/profiles/templates/: create.html  view.html
backend/app/static/css/: style.css
backend/app/static/js/: main.js
backend/app/templates/: base.html  index.html
backend/app/templates/errors/: 403.html  404.html  500.html
backend/migrations/versions/: 0fbfabe64a49_initial_migration_with_user_and_.py
specs/001-intern-crud-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-intern-crud-app/checklists/: requirements.md
specs/001-intern-crud-app/contracts/: routes.md
