[project]
name = "intern-crud"
version = "0.1.0"
description = "Student intern profile management system"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "flask-migrate>=4.0.5",
    "wtforms>=3.1.1",
    "email-validator>=2.1.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

